Optimize storage of struct type fields